started working on code

--- a/web/mainPage.html
+++ b/web/mainPage.html
@@ -2,9 +2,28 @@
 <head>
   <title>Resources</title>
   <meta charset = "utf-8"></meta>
+  <script src="https://www.google.com/jsapi"></script>
+  
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="mainMain.css">
 </head>
 <body>
-  
+  <br>
+  <div class = "header">
+    <div class = "center">
+      <div class="dropdown">
+          <button class="dropbtn">Add new</button>
+          <div class="dropdown-content">
+            <a>Medicine</a>
+            <a>Surgical instrument</a>
+            <a onclick = "createRoom()">Storage Facility</a>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div id = "parent">
+
+  </div>
+  <script src = "main.js"></script>
 </body>
 </html>
