added some more stuff

--- a/web/mainPage.html
+++ b/web/mainPage.html
@@ -3,7 +3,6 @@
   <title>Resources</title>
   <meta charset = "utf-8"></meta>
   <script src="https://www.google.com/jsapi"></script>
-  
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mainMain.css">
 </head>
@@ -24,6 +23,9 @@
   <div id = "parent">
 
   </div>
+  <script src = "Item.js"></script>
+  <script src = "Room.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeh9ywi_A-4UvgmaJKB3mqSpTsIn9gZkA&callback=initMap" async defer></script>
   <script src = "main.js"></script>
 </body>
 </html>
